# AnaMorph

./: .gitignore  .travis.yml  AM_CELLGEN_EXAMPLE2  BUILD  CMakeLists.txt  Makefile.dynamic  Makefile.dynamic.linux  Makefile.static  Makefile.static.x86  README.md  ReadMe  build.md  howto_build
doc/: AM_CELLGEN_EXAMPLE1  AM_CELLGEN_EXAMPLE3  AM_MORPHVIEW_README  Dokumentation.txt  ReadMe
include/: AnaMorph_cellgen.hh  BivariatePolynomial.hh  BoundingBox.hh  CLApplication.hh  CanalSurface.hh  CellNetwork.hh  CellNetworkAlg.hh  CubeCommon.hh  Graph.hh  IdQueue.hh  Matrix.hh  Mesh.hh  MeshAlgorithms.hh  NLM.hh  NLM_CellNetwork.hh  Octree.hh  ParametricCurve.hh  PolyAlgorithms.hh  Polynomial.hh  PriorityQueue.hh  StaticMatrix.hh  StaticVector.hh  Tensor.hh  Vec2.hh  Vec3.hh  Vector.hh  aux.hh  common.hh  debug.hh  uTuple.hh
src/: .project  AnaMorph_cellgen.cc  CLApplication.cc  IdQueue.cc  PolyTemplateSpecializations.cc  Vec2.cc  Vec3.cc  am_cellgen.cc  am_meshstat.cc  aux.cc
tsrc/: BivariatePolynomial.impl.hh  BivariatePolynomial_impl.hh  CanalSurface.impl.hh  CanalSurface.tcc  CanalSurface_impl.hh  CellNetwork.impl.hh  CellNetwork.tcc  CellNetworkAlg.impl.hh  CellNetworkAlg_impl.hh  CellNetwork_impl.hh  Graph.impl.hh  Graph.tcc  Graph_impl.hh  Matrix_impl.hh  Mesh.impl.hh  Mesh.tcc  MeshAlgorithms.impl.hh  MeshAlgorithms.tcc  MeshAlgorithms_impl.hh  Mesh_impl.hh  NLM_CellNetwork.impl.hh  NLM_CellNetwork.tcc  NLM_CellNetwork_impl.hh  ParametricCurve.impl.hh  ParametricCurve.tcc  ParametricCurve_impl.hh  PolyAlgorithms.impl.hh  PolyAlgorithms_impl.hh  Polynomial.impl.hh  Polynomial_impl.hh  StaticMatrix.impl.hh  StaticMatrix_impl.hh  StaticVector.impl.hh  StaticVector_impl.hh  Tensor.impl.hh  Tensor.tcc  Vec3.impl.hh  Vec3.tcc  Vec3_impl.hh  Vector_impl.hh
